# IceGrain

./: CMakeLists.txt  ConvexPerimeter.h  EDMLage.data  FitEllipse.h  README  analyze.h  boundary_data_structure.h  boundary_probabilities.h  bubble_grain_structure.h  combined_rf.hdf5  correct_prediction.h  depth_profile.h  gbn.h  main.cpp  marray.hxx  marray_hdf5.hxx  math_statistics.h  mosaic.cpp  param.h  parameters.txt  path_functions.h  plplot.h  remove_subgrain_arc.cpp  seg.h  single_depth_profile.h  statistics.h  structures_statistics.h  subgrain.cpp  ufd.hxx  view.h
cmake/modules/: FindGSL.cmake  FindHDF5.cmake  FindPLPLOT.cmake  FindVigra.cmake
inc/: Clock.hxx  FileTool.hxx  Parameter.hxx  ParameterFile.hxx  ParameteredObject.hxx  SplitStream.hxx  StringTool.hxx
