project(IceGrain)
cmake_minimum_required(VERSION 2.6)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)

find_package(Vigra   REQUIRED)
find_package(X11     REQUIRED)
find_package(Threads REQUIRED)
find_package(HDF5    REQUIRED)
#find_package(PLPLOT  REQUIRED)
find_package(GSL     REQUIRED)

#include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${VIGRA_INCLUDE_DIR} ${HDF5_INCLUDE_DIR} ${PLPLOT_INCLUDE_DIR} ${GSL_INCLUDE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${VIGRA_INCLUDE_DIR} ${HDF5_INCLUDE_DIR} ${GSL_INCLUDE_DIR})
add_executable(IceGrain main.cpp)
#target_link_libraries(IceGrain ${VIGRA_IMPEX_LIBRARY} ${X11_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${HDF5_LIBRARY} ${HDF5_HL_LIBRARY} ${PLPLOT_LIBRARIES} ${GSL_LIBRARIES})
target_link_libraries(IceGrain ${VIGRA_IMPEX_LIBRARY} ${X11_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${HDF5_LIBRARY} ${HDF5_HL_LIBRARY} ${GSL_LIBRARIES})
